[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sprites/icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Note.gd" type="Script" id=2]

[node name="Note" type="PathFollow2D"]
cubic_interp = false
loop = false
script = ExtResource( 2 )
noteTime = 5.0

[node name="NoteTime" type="Timer" parent="."]
one_shot = true

[node name="Button" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture_normal = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="NoteTime" to="." method="_onSelfTimeout"]
[connection signal="pressed" from="Button" to="." method="_onSelfPressed"]
